API support for shotener setup
