# swagger.yml
@@ -21,13 +21,38 @@ paths:
                   $ref: '#/components/schemas/Url'
     post:
       summary: Add url
+      parameters:
+        - in: query
+          name: shortener
+          schema:
+            type: string
+            enum: ["generator", "hash"]
+          description: shortener algo (may be disabled by the server admin)
+        - in: query
+          name: algo
+          schema:
+            type: string
+            enum: ["md5", "sha1", "sha256","sha512", "fnv32", "fnv32a",  "fnv64", "fnv64a",  "fnv128",  "fnv128a",  "adler32",  "crc32ieee", "crc64iso",  "crc64ecma"]
+          description: valid only for shortener=hash (may be disabled/edited by the server admin)
+        - in: query
+          name: len
+          schema:
+            type: integer
+            minimum: 1
+          description: length of the produced short_url (may be disabled by the server admin)
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/NewUrl'
       responses:
         '201':
           description: Created url
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/NewUrl'
+                $ref: '#/components/schemas/Url'
   /urls/{short_url}:
     get:
       summary: url details
@@ -37,7 +62,7 @@ paths:
           required: true
           description: shorturl
           schema:
-            type : string
+            type: string
       responses:
         '200':
           description: A JSON array of user names
@@ -55,7 +80,7 @@ paths:
           required: true
           description: shorturl
           schema:
-            type : string
+            type: string
       requestBody:
         required: true
         content:
@@ -73,7 +98,7 @@ paths:
           required: true
           description: shorturl
           schema:
-            type : string
+            type: string
       responses:
         '204':
           description: url deleted
